atualizações no cabeçalho

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <span class="linha"></span>
         <span class="linha"></span>
     </button>
-      <!------Divisão 2---------->
+    </header> 
+    
     <nav>
         <div class="nav-list">
             <div class="div-1">
@@ -38,7 +39,7 @@
                         <li><a href="#">Individual</a></li>
                         <li><a href="#">Lotes</a></li>
                         <li><a href="#">Inseminação</a></li>
-                        <li><a href="#">Monta Natural</a></li>
+                        <li><a href="#">Monta</a></li>
                     </ul>  
                 </div>    
             </div>
@@ -74,7 +75,6 @@
             </div>
         </div>
     </nav>
-    </header> 
     <!----------------MENU MOBILE---------------->
     <nav class="navegação-menu-mobile" id="navegação-menu-mobile">
         <div class="nav-list-menu-mobile">
