--- a/index.html
+++ b/index.html
@@ -217,6 +217,31 @@
         </div>
     </div>
 </section>
+<!----------Informações Adicionais---------->
+<section class="seção_informações-adicionais">
+    <div class="botão_informações-adicionais">
+        <input type="button" value="Adicionar Informações" onclick="mostra()"> 
+    </div>
+    <div class="divisão_informações-container" id="informacoes">
+        <div>
+            <label>Origem:</label>
+            <select name="Raça" class="ls-field-lg">
+                <option value="sim">Compra/Leilão</option>
+                <option value="sim">Outro</option>
+        </div>
+        <div>
+            <form action="">
+                <input type="text" placeholder="Fornecedor">
+                <input type="text" placeholder="Cidade">
+                <input type="text" placeholder="UF">
+                <input type="number" placeholder="Valor R$">
+                <input type="text" placeholder="Nº NF">
+            </form>
+        </div>
+    </div>
+
+</section>
+<!----------FINAL Informações Adicionais---------->
 <div class="nome-filiação">
     <h2>Filiação</h2>
 </div>
@@ -293,6 +318,7 @@
         <input type="text">
 
 </section>
+
 <!---------Botões Finais------------->
 <div class="botões">
     <button href="#" class="salvar">Salvar e Novo animal</button>
