implementando outros projetos

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="shortcut icon" href="img/logo-icone.png" type="image/x-icon">
+    <link rel="stylesheet" href="./estilos/styles.css">
+    <link rel="stylesheet" href="estilos/cadastro.css">
     <title>Cadastro</title>
 </head>
 <body>
