mudando as páginas de navegação

--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="estilos/login.css">
 </head>
 <body>
-    <h1>Faça seu cadastro para continuar!</h1>
+    <h1>Faça seu cadastro para continuar.</h1>
 <!-------FORMULÁRIO DE CADASTRO-------->
     <main>
         <form>
@@ -39,7 +39,7 @@
         </form>
     </main>
     <div class="botão-salvar-login">
-     <button><a href="index.html">Salvar</a></button>
+     <button><a href="cadastro.html">Salvar</a></button>
     </div>
     
 </body>
