--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="estilos/login.css">
 </head>
 <body>
-    <h1>Faça seu cadastro para continuar.</h1>
+    <h1>Cadastro</h1>
 <!-------FORMULÁRIO DE CADASTRO-------->
     <main>
         <form>
@@ -20,21 +20,6 @@
             <label for="fazenda">Fazenda</label>
             <div>
                 <input type="text">
-            </div>
-
-            <label for="email">Email</label>
-            <div>
-                <input type="email">
-            </div>
-
-            <label for="senha">Senha</label>
-            <div>
-                <input type="password">
-            </div>
-
-            <label for="confirmarSenha">Confirmar senha</label>
-            <div>
-                <input type="password">
             </div>
         </form>
     </main>
