atualizações nos botões

--- a/cadastro.html
+++ b/cadastro.html
@@ -298,7 +298,8 @@
 <!---------Botões Finais------------->
 <div class="botões">
     <button href="#" class="salvar">Salvar e Novo animal</button>
-    <button href="#" class="voltar">Salvar e Voltar</button>
+    <button href="#" class="voltar">Salvar</button>
+    <button href="#" class="resumo">Resumo</button>
 </div>
     <script src="cabeçalho.js"></script>
     <script src="cadastro.js"></script>
