--- a/cadastro.html
+++ b/cadastro.html
@@ -17,8 +17,8 @@
                 <img src="img/fazenda-teste.png" alt="" width="150px">
             </div>
             <div class="paragrafos-cabeçalho">
-                <p><strong>Proprietário:</strong> José</p>
-                <p><strong>Fazenda:</strong> Campos Belos</p>
+                <label for="">Proprietário:</label><input type="text">
+                <label for="">Fazenda:</label><input type="text">
             </div>
         </div>
     <!------Menu Hamburgue MOBILE---------->
