--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
  <!-------Principal------>
  <div class="principal__container">
     <img src="img/logo-controle-bovino.png" alt="Logo Controle  Bovino" width="189px">
+    <div class="inicial-conteudo-prossiga">
+        <h4>Você está na página inicial de teste do <strong>Controle Bovino</strong> para acessa-lo clique no botão.</h4>
+    </div>
 
     <div class="botões-nav">
         <button class="primeiro-acesso"><a href="login.html">Acesso teste</a></button>   
