--- a/login.html
+++ b/login.html
@@ -10,12 +10,14 @@
 </head>
 <body>
     <h1>Cadastro</h1>
+    <h4>Preencha os campos para prosseguir.</h4>
 <!-------FORMULÁRIO DE CADASTRO-------->
     <main>
         <form>
             <label for="proprietário">Proprietário</label>
             <div>
-                <input type="text">
+                <input type="text" name="form_nome_usuário" value="name
+                ">
             </div>
             <label for="fazenda">Fazenda</label>
             <div>
@@ -26,5 +28,6 @@
     <div class="botão-salvar-login">
      <button><a href="cadastro.html">Salvar</a></button>
     </div>
+    <script src="cadastro.js"></script>
 </body>
 </html>
