--- a/cadastro.html
+++ b/cadastro.html
@@ -13,7 +13,7 @@
     <header class="cabeçalho__container">
         <!----------Divisão 1----------->
         <div class="cabeçalho-1-1">
-            <div>
+            <div class="cabeçalho-imagem">
                 <img src="img/fazenda-teste.png" alt="" width="150px">
             </div>
             <div class="paragrafos-cabeçalho">
