--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./estilos/primeiroacesso.css">
 </head>
 <body>
+<!------------Cabeçalho----------->
+<header>
+    <nav class="navegação-sobre">
+        <a href="sobre.html">Sobre</a>
+    </nav>
+</header>
  <!-------Principal------>
  <div class="principal__container">
     <img src="img/logo-controle-bovino.png" alt="Logo Controle  Bovino" width="189px">
@@ -18,9 +24,6 @@
     <div class="botões-nav">
         <button class="primeiro-acesso"><a href="login.html">Acesso teste</a></button>   
     </div>   
-
 </div>
-
-    
 </body>
 </html>
