--- a/sobre.html
+++ b/sobre.html
@@ -9,9 +9,32 @@
     <title>Sobre o Controle Bovino</title>
 </head>
 <body>
+    <header>
+        <h1>Perguntas frequentes:</h1>
+    </header>
+    <hr>
+    <!----------------Principal-------->
     <main>
-        <h1>Sobre o Controle Bovino</h1>
+        <!-----Section-1------>
+        <section>
+            <h4>O que é?</h4>
+            <p>Uma plataforma Web de Controle de Bovinos, com a finalidade de controle e gestão do rebanho.</p>
+            <br>
+            <h4>Qual público a plataforma atende?</h4>
+            <p>O público alvo são pecuaristas criadores de bovinos e bubalinos de todas as raças e categorias .</p>
+            <br>
+            <h4>Lorem</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda iste tempora libero sit odit nisi rerum blanditiis, molestias error neque mollitia sed est saepe quae facere voluptas? Praesentium, ratione porro..</p>
+            <br>
+            <h4>Lorem</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda iste tempora libero sit odit nisi rerum blanditiis, molestias error neque mollitia sed est saepe quae facere voluptas? Praesentium, ratione porro..</p>
+            <br>
+            <h4>Lorem</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda iste tempora libero sit odit nisi rerum blanditiis, molestias error neque mollitia sed est saepe quae facere voluptas? Praesentium, ratione porro..</p>
+            <br>
+            <h4>Lorem</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda iste tempora libero sit odit nisi rerum blanditiis, molestias error neque mollitia sed est saepe quae facere voluptas? Praesentium, ratione porro..</p>
+        </section>
     </main>
-    
 </body>
 </html>
