--- a/sobre.html
+++ b/sobre.html
@@ -21,19 +21,23 @@
             <p>Uma plataforma Web de Controle de Bovinos, com a finalidade de controle e gestão do rebanho.</p>
             <br>
             <h4>Qual público a plataforma atende?</h4>
-            <p>O público alvo são pecuaristas criadores de bovinos e bubalinos de todas as raças e categorias .</p>
+            <p>O público alvo são pecuaristas criadores de bovinos de todas as raças e categorias .</p>
             <br>
-            <h4>Lorem</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda iste tempora libero sit odit nisi rerum blanditiis, molestias error neque mollitia sed est saepe quae facere voluptas? Praesentium, ratione porro..</p>
+            <h4>Qual a ideia principal?</h4>
+            <p>Gestão e o gerenciamente sobre o controle do rebanho de forma tecnológica onde possa haver consultas e resumos de forma eficiente e segura.</p>
             <br>
-            <h4>Lorem</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda iste tempora libero sit odit nisi rerum blanditiis, molestias error neque mollitia sed est saepe quae facere voluptas? Praesentium, ratione porro..</p>
+            <h4>Existe aplicativo do Controle Bovino para mobile?</h4>
+            <p>O processo de criação do aplicativo está em desenvolvimento. A criação web foi para colocar em prática e absorver as ideias para que demos seguimento.</p>
             <br>
-            <h4>Lorem</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda iste tempora libero sit odit nisi rerum blanditiis, molestias error neque mollitia sed est saepe quae facere voluptas? Praesentium, ratione porro..</p>
+            <h4>Onde posso encontrar ajuda?</h4>
+            <p>Oferecemos um <a href="#">tutorial</a> de como prosseguir para melhor experiência dentro da plaforma.</p>
             <br>
-            <h4>Lorem</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda iste tempora libero sit odit nisi rerum blanditiis, molestias error neque mollitia sed est saepe quae facere voluptas? Praesentium, ratione porro..</p>
+            <h4>Como posso contribuir com um feedback?</h4>
+            <p>Entre em contato conosco através das redes sociais abaixo.</p>
+        </section>
+        <section class="container__redes-sociais">
+            <a href="mailto:vetdevs@gmail.com"><img src="img/icone-email.png" alt="Email"></a>
+            <a href="https://www.instagram.com/vetdevweb/"><img src="img/icone-instagram.png" alt="Instagram"></a>
         </section>
     </main>
 </body>
