atualizações pagina de resumo

--- a/cadastro.html
+++ b/cadastro.html
@@ -299,7 +299,7 @@
 <div class="botões">
     <button href="#" class="salvar">Salvar e Novo animal</button>
     <button href="#" class="voltar">Salvar</button>
-    <button href="#" class="resumo">Resumo</button>
+    <a href="resumo.html"><button class="resumo">Resumo</button></a>
 </div>
     <script src="cabeçalho.js"></script>
     <script src="cadastro.js"></script>
