--- a/cadastro.html
+++ b/cadastro.html
@@ -17,7 +17,7 @@
                 <img src="img/fazenda-teste.png" alt="" width="150px">
             </div>
             <div class="paragrafos-cabeçalho">
-                <label for="">Proprietário:</label><input type="text">
+                <label for="">Proprietário (a):</label><input type="text">
                 <label for="">Fazenda:</label><input type="text">
             </div>
         </div>
