atualizando banco de dados

--- a/resumo.html
+++ b/resumo.html
@@ -246,8 +246,8 @@
 <di class="botão-voltar">
     <a href="cadastro.html"><button>Voltar</button></a>
 </di>
-
     <script src="cabeçalho.js"></script>
-    <script src="cadastro.js"></script>
+    <script src="resumo.js"></script>
+
 </body>
 </html>
