--- a/cadastro.html
+++ b/cadastro.html
@@ -16,9 +16,8 @@
             <div class="cabeçalho-imagem">
                 <img src="img/fazenda-teste.png" alt="" width="150px">
             </div>
-            <div class="paragrafos-cabeçalho">
-                <label for="">Proprietário (a):</label><input type="text">
-                <label for="">Fazenda:</label><input type="text">
+            <div class="paragrafos-cabeçalho">               <label for="nome">Proprietário (a):</label><input type="text" id="nome">
+                <label for="">Fazenda:</label><input type="text" id="fazenda">
             </div>
         </div>
     <!------Menu Hamburgue MOBILE---------->
