--- a/resumo.html
+++ b/resumo.html
@@ -24,37 +24,59 @@
             <h3>Resumo</h3>
             <br>
             <div class="resumo-animais">
-                <label for="">Nome do animal:</label><input type="text" name="" id="">
+                <label for="">Nome do animal:</label><input type="text" name="" id="nomeAnimalResumo">
             </div>
             <div>
-                <label for="">Nº do animal:</label><input type="text" name="" id="">
+                <label for="">Nº do animal:</label><input type="text" name="" id="numeroAnimalResumo">
+            </div>
+
+            <div>
+                <label for="">Categoria:</label><input type="text" name="" id="categoriaAnimalResumo">
             </div>
 
             <div class="meses-input"> 
-                <label for="">Meses:</label><input type="text" name="" id="">
+                <label for="">Meses:</label><input type="text" name="" id="mesesAnimalResumo">
             </div>
 
             <div class="raca-input">
-                <label for="">Raça:</label><input type="text" name="" id="">
+                <label for="">Raça:</label><input type="text" name="" id="racaAnimalResumo">
             </div>
 
             <div>
-                <label for="">Lote:</label><input type="text" name="" id="">
+                <label for="">Lote:</label><input type="text" name="" id="loteAnimalResumo">
             </div>
-
-            <div>
-                <label for="">Mãe:</label><input type="text" name="" id="">
-            </div>
-            <div>
-                <label for="">Nº:</label><input type="text" name="" id="">
-            </div>
-
-            <div>
-                <label for="">Pai:</label><input type="text" name="" id="">
-            </div>
-            <div>
-                <label for="">Nº:</label><input type="text" name="" id="">
-            </div>
+            <hr>
+            <div class="container__filiação">
+                <div>
+                    <label for="">Mãe:</label><input type="text" name="" id="nomeMaeResumo">
+                </div>
+                <div>
+                    <label for="">Nº:</label><input type="text" name="" id="numeroMaeResumo">
+                </div>
+                <div class="container_informaçoes_div-mae">
+                    <div>
+                        <label for="">Raça:</label><input type="text" name="" id="racaMaeResumo">
+                    </div>
+                    
+                    <div>
+                        <label for="">Lote:</label><input type="text" name="" id="loteMaeResumo">
+                    </div>
+                </div>
+                <div>
+                    <label for="">Pai:</label><input type="text" name="" id="nomePaiResumo">
+                </div>
+                <div>
+                    <label for="">Nº:</label><input type="text" name="" id="numeroPaiResumo">
+                </div>
+                <div class="container_informaçoes_div-pai">
+                    <div>
+                        <label for="">Raça:</label><input type="text" name="" id="racaPaiResumo">
+                    </div>
+                    <div>
+                        <label for="">Lote:</label><input type="text" name="" id="lotePaiResumo">
+                    </div>
+                </div>
+             </div>
         </div>
         <hr>
 <!--Informações de Origem-->
@@ -132,7 +154,6 @@
 <di class="botão-voltar">
     <a href="cadastro.html"><button>Voltar</button></a>
 </di>
-    <script src="cabeçalho.js"></script>
     <script src="resumo.js"></script>
 
 </body>
